2/lab/3/http-echo-1.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: http-echo-1
  name: http-echo-1
spec:
  containers:
  - name: http-echo-1
    image: hashicorp/http-echo
    ports:
    - name: http-echo-1
      containerPort: 80
      protocol: TCP
    args:
    - -listen=:80
    - --text="Hello from http-echo-1"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo-1
  name: http-echo-1
spec:
  type: NodePort
  selector:
    app: http-echo-1
  ports:
  - protocol: TCP
    targetport: 80
