2/lab/3/http-echo-2.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: http-echo-2
  name: http-echo-2
spec:
  containers:
  - name: http-echo-2
    image: hashicorp/http-echo
    ports:
    - name: http-echo-2
      containerPort: 80
      protocol: TCP
    args:
    - -listen=:80
    - --text="Hello from http-echo-2"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo-2
  name: http-echo-2
spec:
  type: NodePort
  selector:
    app: http-echo-2
  ports:
  - protocol: TCP
    port: 80
